syntax = "proto3";

option go_package = "github.com/crypto-quant/exchange-api-gateway/pb/out/pb_common";

enum Side {
  UNKNOWN = 0;
  BUY = 1;
  SELL = 2;
  BUY_MARKET = 3;
  SELL_MARKET = 4;
}

enum OrderStatus {
  ORDER_NEW = 0;
	ORDER_PARTIALLY_FILLED = 1;
	ORDER_FILLED = 2;
	ORDER_CANCELLED = 3;
	ORDER_REJECTED = 4;
	ORDER_PENDING_CANCEL = 5;
  ORDER_FAILED = 6;
}